# CPlusPlus

./: C++ Basics - Q&A.docx  CMakeLists.txt  Multithreading.md  README.md
.github/workflows/: cmake-multi-platform.yml
Design_Patterns/: Singleton.cpp
Multithreading/: CMakeLists.txt  Demo.cpp  Multithreading_1.md  Mutex_Lockguards.cpp  UniqLock_CondVar_Deadlocks.cpp
Multithreading/Real_Examples/: CMakeLists.txt
Smart_Pointers/: CMakeLists.txt  custom_unique_ptr.cpp  unique_ptr.cpp
